--- a/hr-payroll/pom.xml
+++ b/hr-payroll/pom.xml
@@ -51,6 +51,12 @@
 			<artifactId>spring-boot-starter-webflux</artifactId>
 			<version>2.6.2</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
